# ICS-Web-App

./: .flaskenv  README.md  REQUIREMENTS  __init__.py  about.html  app_factory.py  auth.py  base.html  cloud.html  forms.py  home.html  ics.html  index.html  main.py  models.py  pylintresults1.txt  pyproject.toml  routes.py  run.py
