[project]
name = "webapp"
dependencies = [
    "flask", "flask-login", "flask-sqlalchemy", "flask-migrate", "flask-wtf"
]
version = "1.0.0"
description = "a simple web application to demonstrate security in software development"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
